--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.7",
     "require": "^2.4.20",
-    "socket.io": "^3.1.0"
+    "socket.io": "^3.1.0",
+    "start": "^5.1.0"
   },
   "name": "project3",
   "description": "",
